--- a/build.gradle
+++ b/build.gradle
@@ -10,12 +10,17 @@ buildscript {
 	}
 }
 
+
+
+
+apply plugin: 'application'
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
+mainClassName = "com.scmspain.MsFcTechTestApplication"
 
 repositories {
 	mavenCentral()
